objects/Service_Person__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile_types__c</fullName>
        <label>Mobile types</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IOS</fullName>
                </value>
                <value>
                    <fullName>Anroid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Activity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Services_Provide__c</fullName>
        <label>Services Provide</label>
        <referenceTo>Services_Provide__c</referenceTo>
        <relationshipLabel>Service Persons</relationshipLabel>
        <relationshipName>Service_Persons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Not active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Threshold</label>
        <type>Checkbox</type>
    </fields>
    <label>Service Person</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>No_of_Activity__c</columns>
        <columns>Threshold__c</columns>
        <columns>Services_Provide__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Person Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Persons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Threshold_is_equal_to_10</fullName>
        <active>true</active>
        <errorConditionFormula>No_of_Activity__c  &gt;  10</errorConditionFormula>
        <errorMessage>Threshold for the month is reached</errorMessage>
    </validationRules>
</CustomObject>